--- a/src/components/TempHeader/tempHeader.css
+++ b/src/components/TempHeader/tempHeader.css
@@ -2,15 +2,9 @@
   background-color: white;
 }
 
-.plus {
-  /* background-color: white; */
-}
-
 .dot {
   float: left;
   width: 10px;
-
-  /* background-color: white; */
 }
 
 .invisible {
@@ -25,8 +19,6 @@
 .togggle-off,
 .togggle-on {
   color: white;
-
-  /* background-color: white; */
 }
 
 .celcious,
@@ -38,4 +30,14 @@
 .left,
 .next {
   opacity: 0.5;
+}
+
+.bi-sunset-fill,
+.bi-sunrise-fill {
+  color: white;
+}
+
+.temparature {
+  font-size: 90px;
+  font-weight: bold;
 }
